--- a/RentCarApi.csproj
+++ b/RentCarApi.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.11">
       <PrivateAssets>all</PrivateAssets>
@@ -23,7 +24,6 @@
 
   <ItemGroup>
     <Folder Include="Controllers\User\" />
-    <Folder Include="Services\VehicleServices\" />
   </ItemGroup>
 
 </Project>
